# hetnetdb

./: .dockerignore  CODEOWNERS  Cargo.toml  Dockerfile  Makefile.toml  README.md  bootstrap.sh  drill.yml  queries.txt  query.sh  upload.sh
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: main.yml
migrations/2020-11-15-180901_create_users/: up.sql
migrations/2020-11-15-181226_create_table_schemas/: down.sql  up.sql
migrations/2020-11-15-181306_create_tables/: down.sql  up.sql
src/: auth.rs  db.rs  error_handler.rs  main.rs  schema.rs
src/graph/: mod.rs  node.rs  routes.rs
src/health/: routes.rs
src/query/: execute.rs  mod.rs  query.rs  routes.rs  sql_types.rs
src/table_schemas/: model.rs  routes.rs
src/tables/: model.rs  routes.rs
src/users/: model.rs  routes.rs
