[package]
name = "hetnetdb"
version = "0.1.0"
authors = ["Jacob Trueb <jtrueb@northwestern.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-multipart = "0.3.0"
actix-web = "3.2.0"
actix-web-httpauth = "0.5.0"
actix-service = "1.0.6"
actix-rt = "1.1.1"
base64 = "0.13.0"
bcrypt = "0.9.0"
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
diesel = { version = "1.4.5", features = ["postgres", "r2d2", "uuid", "chrono"] }
diesel_migrations = "1.4.0"
dyn-clone = "1.0.3"
env_logger = "0.8.1"
futures = { version = "0.3.7", features = ["compat"] }
futures-util = "0.3.7"
http = "0.2"
lazy_static = "1.4.0"
listenfd = "0.3.3"
log = "0.4.11"
nom-sql = "0.0.11"
serde = "1.0.117"
serde_json = "1.0.59"
r2d2 = "0.8.9"
rand = "0.7.3"
rust-crypto = "0.2"
sanitize-filename = "0.3.0"
typetag = "0.1.6"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
csv = "1.1.4"
