[package]
name = "hetnetdb"
version = "0.1.1"
authors = ["Jacob Trueb <trueb2@illinois.edu>"]
description = "Easy-to-Use Heterogenous SQL Database"
edition = "2018"
readme = "README.md"
license = "GPL-3.0"
homepage = "https://github.com/trueb2/hetnetdb"
repository = "https://github.com/trueb2/hetnetdb"
documentation = "https://github.com/trueb2/hetnetdb/blob/master/README.md"
keywords = ["heterogenous", "actix", "sql", "distributed"]
categories = ["command-line-utilities", "database-implementations", "parsing"]
include = [
    "**/*.rs",
    "Cargo.toml",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-multipart = "0.3.0"
actix-web = "3.3.2"
actix-web-httpauth = "0.5.0"
actix-service = "1.0.6"
actix-rt = "1.1.1"
async-trait = "0.1.42"
base64 = "0.13.0"
bcrypt = "0.9.0"
chrono = { version = "0.4.19", features = ["serde"] }
csv = "1.1.5"
dotenv = "0.15.0"
diesel = { version = "1.4.5", features = ["postgres", "r2d2", "uuid", "chrono"] }
diesel_migrations = "1.4.0"
dyn-clone = "1.0.4"
env_logger = "0.8.2"
futures = { version = "0.3.12", features = ["compat"] }
futures-util = "0.3.12"
http = "0.2"
lazy_static = "1.4.0"
listenfd = "0.3.3"
log = "0.4.14"
nom-sql = "0.0.11"
serde = "1.0.122"
serde_json = "1.0.61"
r2d2 = "0.8.9"
rand = "0.8.1"
rust-crypto = "0.2"
sanitize-filename = "0.3.0"
serde_urlencoded = "0.7.0"
simple_logger = "1.11.0"
typetag = "0.1.6"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
